<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    tools:context=".Ordpg" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tableno"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:onClick="selectionitem"
        android:text="@string/_1" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox6"
        android:onClick="selectionitem"
        android:text="@string/creamy_chicken_soup_158" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_below="@+id/checkBox7"
        android:onClick="selectionitem"
        android:text="@string/mutton_soup_190" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/checkBox14"
        android:text="Order" 
        android:onClick="finalview"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox2"
        android:text="@string/non_veg_soups"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox6"
        android:layout_below="@+id/textView2"
        android:onClick="selectionitem"
        android:text="@string/corn_chicken_stock_145" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_below="@+id/checkBox9"
        android:onClick="selectionitem"
        android:text="Chicken Soup:120" />

    <TextView
        android:id="@+id/Final_result"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/checkBox12"
        android:text="Your Order" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_alignRight="@+id/textView3"
        android:onClick="selectionitem"
        android:text="@string/_2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="69dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/checkBox9"
        android:src="@drawable/white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="231dp"
        android:layout_height="110dp"
        android:layout_alignTop="@+id/checkBox6"
        android:layout_toRightOf="@+id/checkBox9"
        android:src="@drawable/mush" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox8"
        android:layout_below="@+id/imageView1"
        android:text="Veg Soups"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox13"
        android:layout_below="@+id/checkBox13"
        android:layout_toRightOf="@+id/checkBox8"
        android:onClick="selectionitem"
        android:text="Spinach Soup:85" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_toRightOf="@+id/checkBox7"
        android:onClick="selectionitem"
        android:text="Mushroom Soup:67" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/textView3"
        android:onClick="selectionitem"
        android:text="Clear Soup:50" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/checkBox11"
        android:onClick="selectionitem"
        android:text="Tomato Soup:78" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_above="@+id/checkBox12"
        android:layout_alignLeft="@+id/checkBox10"
        android:layout_alignRight="@+id/checkBox7"
        android:onClick="selectionitem"
        android:text="Creamy Corn Soup:85" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox10"
        android:layout_below="@+id/textView1"
        android:onClick="selectionitem"
        android:text="3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/checkBox7"
        android:onClick="selectionitem"
        android:text="4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/imageView1"
        android:onClick="selectionitem"
        android:scrollHorizontally="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:text="@string/_5" />

</RelativeLayout>
